# V2GEvil

./: .gitignore  README.md  pyproject.toml
config/: env-evcc  env-secc
docs/: index.html  search.js  v2gevil.html
docs/v2gevil/: car.html  cli.html  enumerator.html  fuzzer.html  messages.html  schemas.html  sender.html  sniffer.html  station.html  v2gtp.html
docs/v2gevil/car/: car.html  car_scapy.html
docs/v2gevil/cli/: car_tools.html  console.html  message_tools.html  modules_tools.html  sender_tools.html  sniffer_tools.html  station_tools.html  v2gtp_tools.html
docs/v2gevil/enumerator/: enumerate_ev.html  enumerator.html  enumerator_enums.html
docs/v2gevil/fuzzer/: authorization.html  cable_check.html  charge_parameter_discovery.html  charging_status.html  current_demand.html  fuzz_datatypes.html  fuzz_msg_general.html  fuzzer.html  fuzzer_enums.html  fuzzer_supported_app_protocol.html  gen_types.html  metering_receipt.html  payment_details.html  payment_service_selection.html  power_delivery.html  pre_charge.html  service_detail.html  service_discovery.html  session_setup.html  session_stop.html  welding_detection.html
docs/v2gevil/messages/: AppProtocol.html  MsgBody.html  MsgDataTypes.html  MsgDef.html  MsgHeader.html  generator.html  messages.html  namespace_map.html  xmldsig-core-schema.html
docs/v2gevil/sender/: sender.html
docs/v2gevil/sniffer/: sniffer.html
docs/v2gevil/station/: station.html  station_enums.html  station_scapy.html
docs/v2gevil/v2gtp/: console_handler.html  v2gtp.html  v2gtp_enums.html
scripts/: autoremove_v2gevil.sh  build_and_deploy.sh  config_boards.sh  config_ev_board.sh  config_evse_board.sh  install_evcc.sh  install_secc.sh  start_evcc.sh  start_secc.sh
src/v2gevil/car/: car.py  car_scapy.py
src/v2gevil/cli/: __main__.py  car_tools.py  console.py  message_tools.py  modules_tools.py  (+4 more)
tests/: messages_tests.py
(+53 files in other folders)
