[tool.poetry]
name = "v2gevil"
version = "0.1.0"
description = ""
authors = ["khuntpav <p.smoulin@seznam.cz>"]
readme = "README.md"
packages = [{include = "src/v2gevil"}]

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.5.0"
rich-click = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
v2gevil = "src.v2gevil.cli.__main__:main"

