[tool.poetry]
name = "V2GEvil"
version = "0.1.0"
description = ""
authors = ["khuntpav <khuntpav@fit.cvut.cz>"]
readme = "README.md"
packages = [{include = "src/v2gevil"}]

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.5.0"
rich-click = "^1.6.1"
cryptography = "^41.0.2"
requests = "^2.31.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
v2gevil = "src.v2gevil.cli.__main__:main"

[tool.black]
line-length = 79
