[tool.poetry]
name = "V2GEvil"
version = "1.0.0"
description = "V2GEvil is tool for "
license = "GPL-2.0-or-later"
authors = ["Pavel Khunt <khuntpav@fit.cvut.cz>"]
maintainers = ["Pavel Khunt <khuntpav@fit.cvut.cz>"]
readme = "README.md"
repository = "https://github.com/khuntpav/V2GEvil"
packages = [{include = "src/v2gevil"}]

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.5.0"
rich-click = "^1.6.1"
cryptography = "^41.0.2"
requests = "^2.31.0"
black = "^23.7.0"
xmlschema = "^2.4.0"
generateds = "^2.43.2"
pydantic = "^2.3.0"
deptry = "^0.12.0"
xmltodict = "^0.13.0"
dict2xml = "^1.7.3"
json2xml = "^4.0.0"
art = "^6.1"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
v2gevil = "src.v2gevil.cli.__main__:main"

[tool.black]
line-length = 79
